--- a/property_details.css
+++ b/property_details.css
@@ -29,19 +29,31 @@ body {
     object-fit: contain;
   }
   .header h1{
-    margin-right: 50px;
+    margin-right: 200px;
   }
 
 /* Property Details Container */
+.pptyheading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .property-details {
     max-width: 600px;
-    height: 200px;
+    height: 750px;
     margin: 20px auto;
     padding: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    background: rgb(236, 237, 238);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(54, 54, 54, 0.3);
 }
+.property-details h2{
+    padding-left: 20px;
+}
+
 .propertycontents{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -53,7 +65,9 @@ body {
 }
 .ownerdetails{
     display: flex;
-    gap: 60px;
+    gap: 100px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 .bookbutton{
     width: 100%;
@@ -64,9 +78,9 @@ body {
 
 /* Property Title */
 .property-details h1 {
-    font-size: 28px;
+    font-size: 35px;
     color: #333;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 /* Property Image */
@@ -105,6 +119,7 @@ body {
 
 .property-details button:hover {
     background-color: #45a049;
+    translate: 0.9s;
 }
 
 /* Flex layout for Property and Owner Info */
