--- a/booking.css
+++ b/booking.css
@@ -7,8 +7,12 @@ body {
     width: 400px;
     background-color: #fff;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background: rgba(213, 217, 218, 0.3);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(54, 54, 54, 0.3);
 }
 .payment-container h1 {
     text-align: center;
@@ -38,5 +42,33 @@ body {
     background-color: #218838;
 }
 .payment-details {
-    margin-top: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
 }
+.payment-container label{
+    padding-bottom: 10px;
+}
+.header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black  ;
+    background-color:transparent;
+    backdrop-filter: blur(5px); 
+    -webkit-backdrop-filter: blur(15px); 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    height: 60PX;
+  }
+  .header img{
+    width: 190px;
+    height: 70px;
+    object-fit: contain;
+  }
+  .header h1{
+    margin-right: 170px;
+  }
